# hillspace

./: .gitignore  LICENSE.md  README.md  paper2docs.py  pyproject.toml
figures/: activation_visualization.py  additive_primitive.html  exponential_primitive.html  trigonometric_products_primitive.html  unit_circle_primitive.html
hillspace/: model.py  train.py
paper/: Hill Space is All You Need.md
results/: comprehensive_analysis_add_float32.json  comprehensive_analysis_add_float64.json  comprehensive_analysis_divide_float32.json  comprehensive_analysis_divide_float64.json  comprehensive_analysis_multiply_float32.json  comprehensive_analysis_multiply_float64.json  comprehensive_analysis_subtract_float32.json  comprehensive_analysis_subtract_float64.json  comprehensive_error_analysis.csv  inalu_all_runs.csv  inalu_comparison_00_seed_2979.csv  inalu_comparison_01_seed_23344.csv  inalu_comparison_02_seed_9974.csv  inalu_comparison_03_seed_1977.csv  inalu_comparison_04_seed_99563.csv  inalu_comparison_05_seed_83233.csv  inalu_comparison_06_seed_81250.csv  inalu_comparison_07_seed_50993.csv  inalu_comparison_08_seed_35145.csv  inalu_comparison_09_seed_1808.csv  inalu_summary.csv  init_analysis_run_00_seed_38928_schedulefree.json  init_analysis_run_01_seed_14624_schedulefree.json  init_analysis_run_02_seed_71526_schedulefree.json  init_analysis_run_03_seed_12695_schedulefree.json  init_analysis_run_04_seed_34702_schedulefree.json  init_analysis_run_05_seed_32037_schedulefree.json  init_analysis_run_06_seed_30811_schedulefree.json  initialization_analysis_detailed.csv  (+4 more)
(+12 files in other folders)
